syntax = "proto3";

package cn.krossframework.proto;

option optimize_for = SPEED;

import "Entity.proto";

option java_outer_classname = "Chat";

message Login {
  string username = 1;
}

message LoginResult {
  string id = 1;
  string username = 2;
}


message ChatMessage {
  repeated string to = 2;
  string msg = 3;
  int32 emoticon = 4;
  bytes stream = 5;
}

message ChatMessageResult {
  string from = 1;
  bool toAll = 2;
  repeated string to = 3;
  ChatMessage chatMessage = 4;
  repeated ChatMessage history = 5;
}

message CreateRoom {
  int64 roomId = 1;
}

message CreateRoomResult {
  int64 roomId = 1;
}

message EnterRoom {

}

message EnterRoomResult {
  RoomData roomData = 1;
}

message CloseRoom {

}

message CloseRoomResult {

}
